--- a/site/public/PageReg.html
+++ b/site/public/PageReg.html
@@ -76,6 +76,7 @@
                         passwС
 
                     ]));
+                    //window.localStorage.removeItem("aName");
                     login.value = "";
                     password.value = "";
 
