--- a/site/public/index.html
+++ b/site/public/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <script src="http://localhost:3033/socket.io/socket.io.js"></script>
+
+
     <div id="sslk" style="height:90px">
         Какая-нибуд картинка или видео.
     </div>
@@ -21,7 +24,8 @@
         <div id="bdiv" class="my-flex-containerH">
 
             <img style="" src="" width=10 height=10 alt="logo">
-            <p>Какая-нибуд надпись</p>
+            <p id="Hn">Какая-нибуд надпись</p>
+
             <script>
                 const idup = "bdiv";
                 const Tbutton = 0;
@@ -43,6 +47,7 @@
                 ];
             </script>
             <script src="upscript.js"></script>
+            <script src="scriptSconn.js"></script>
         </div>
     </header>
     <div id="hbb">
