--- a/site/public/Page1.html
+++ b/site/public/Page1.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Samohwalov Dmitriy">
     <link rel="stylesheet" href="stylesheets/styleP1.css">
     <script src=""></script>
-    <link rel="import" href="http://gmcr.ml/PageLogin.html">
+    <!--  <link rel="import" href="PageLogin.html"> -->
 
 </head>
 
