--- a/site/public/index.html
+++ b/site/public/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <script src="http://localhost:3033/socket.io/socket.io.js"></script>
+    <script src="scriptSconn.js"></script>
 
 
     <div id="sslk" style="height:90px">
@@ -176,6 +177,7 @@
         контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..контент...
         контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..
     </div>
+
     <script>
         document.body.onload = () => {} //onload
 
