--- a/site/public/PageLogin.html
+++ b/site/public/PageLogin.html
@@ -22,6 +22,7 @@
     <div id="in2" style=" border: 2px solid red; padding:5px"></div>
     <div> <a href="index.html" style="">На главную</a></div>
     <div class="login">
+        <button>X</button>
         <h3>Вход</h3>
         <label for="login">Логин</label>
         <input type="text" id="login" name="login" />
@@ -60,12 +61,15 @@
 
 
         });
+        document.querySelector('.login button').onclick = () => {
+            document.querySelector('.login').style.display = "none";
+        };
 
         loginB.onclick = () => {
             socket.emit("login", ([login.value, password.value]));
 
             window.localStorage.setItem("aName", login.value);
-            //alert('aName1' + window.localStorage.getItem('aName'));
+            //alert('aName ' + window.localStorage.getItem('aName'));
             login.value = "";
             password.value = "";
         };
