--- a/site/public/Page1.html
+++ b/site/public/Page1.html
@@ -175,8 +175,8 @@
     <script>
         hbb.style.height = document.getElementsByTagName('header')[0].clientHeight + "px";
 
-        const divn2 = document.createElement('button');
-        divn2.innerHTML = "Вход2";
+        //const divn2 = document.createElement('button');
+        //divn2.innerHTML = "Вход2";
         /* divn2.onmouseup = () => {
 
             document.body.appendChild(doc.cloneNode(true));
