--- a/site/public/index.html
+++ b/site/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Экспериментальный сайт.">
     <meta name="author" content="Samohwalov Dmitriy">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/style1.css">
     <script src=""></script>
 
 </head>
@@ -47,10 +48,12 @@
                     }
                 ];
             </script>
-            <script src="upscript.js"></script>
-            <script src="scriptSconn.js"></script>
         </div>
     </header>
+    <script src="Plogin1.js"></script>
+    <script src="upscript.js"></script>
+    <script src="Plogin.js"></script>
+
     <div id="hbb">
     </div>
     <div>
@@ -180,6 +183,7 @@
 
     <script>
         document.body.onload = () => {} //onload
+
 
         hbb.style.height = document.getElementsByTagName('header')[0].clientHeight + "px";
         //alert(document.getElementsByTagName('header')[0].clientHeight)
