--- a/site/public/PageLogin.html
+++ b/site/public/PageLogin.html
@@ -31,16 +31,28 @@
         <input type="submit" value="Войти" id="loginB" />
     </div>
 
+    <div>
+        <input id="delV" name="dl" type="text" placeholder="del" style="display:block;">
+        <button id="PdelBc" style="display:block;">Удалить
+    </button>
+    </div>
+
+    <div>
+        <input id="updateN" name="dl" type="text" placeholder="имя">
+        <input id="updateP" name="dl" type="text" placeholder="новый пароль">
+        <button id="Pupdatec" style="display:none;">Изменить пароль
+    </button>
+    </div>
 
     <script>
         // const socket = io.connect('http://localhost:3033');
 
 
-        socket.on('whuN', function() {
+        /* socket.on('whuN', function() {
 
             socket.emit("whuS");
         });
-
+ */
 
         socket.on('whu', function(value) {
             // alert("yes!");
@@ -72,6 +84,36 @@
             //alert('aName ' + window.localStorage.getItem('aName'));
             login.value = "";
             password.value = "";
+        };
+
+
+        let nameP;
+        socket.on('sendname', function(value) {
+            nameP = value;
+            if (nameP === "admin") {
+                PdelBc.style.display = "block";
+                Pupdatec.style.display = "block";
+            }
+        });
+
+        PdelBc.onclick = () => {
+            //alert("fffff");
+            socket.emit("PdelB", delV.value);
+            delV.value = "";
+        };
+
+        Pupdatec.onclick = () => {
+
+            socket.emit("Pupdate", ([
+                updateN.value,
+                updateP.value
+
+            ]));
+
+            updateN.value = "";
+            updateP.value = "";
+
+
         };
     </script>
 
