--- a/site/public/index.html
+++ b/site/public/index.html
@@ -44,7 +44,7 @@
 
                     {
                         "ssl": "PageLogin.html",
-                        wrd: "Вход"
+                        wrd: "Кабинет"
                     }
                 ];
             </script>
