--- a/site/public/Page1.html
+++ b/site/public/Page1.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Экспериментальный сайт.">
     <meta name="author" content="Samohwalov Dmitriy">
     <link rel="stylesheet" href="stylesheets/styleP1.css">
+    <link rel="stylesheet" href="stylesheets/style1.css">
     <script src=""></script>
     <!--  <link rel="import" href="PageLogin.html"> -->
 
@@ -18,6 +19,7 @@
 
     <!-- <link rel="import" href="../public/PageLogin.html"> -->
     <script src="http://localhost:3033/socket.io/socket.io.js"></script>
+    <script src="scriptSconn.js"></script>
     <header>
         <div id="bdiv" class="my-flex-containerH">
 
@@ -39,13 +41,16 @@
 
                     {
                         "ssl": "PageLogin.html",
-                        wrd: "Вход"
+                        wrd: "Кабинет"
                     }
                 ];
             </script>
-            <script src="upscript.js"></script>
+
         </div>
     </header>
+    <script src="Plogin1.js"></script>
+    <script src="upscript.js"></script>
+    <script src="Plogin.js"></script>
     <div id="hbb">
     </div>
     <h2 style=" border-bottom: 5px double #cbae61;">Другая страница</h2>
@@ -171,7 +176,7 @@
     контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..контент...
     контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент... контент..
     </div>
-    <script src="scriptSconn.js"></script>
+
     <script>
         hbb.style.height = document.getElementsByTagName('header')[0].clientHeight + "px";
 
