--- a/site/public/Page1.html
+++ b/site/public/Page1.html
@@ -19,7 +19,7 @@
 
     <!-- <link rel="import" href="../public/PageLogin.html"> -->
     <script src="http://localhost:3033/socket.io/socket.io.js"></script>
-    <script src="scriptSconn.js"></script>
+    <script src="scriptSconn.js" id="scriptSconn"></script>
     <header>
         <div id="bdiv" class="my-flex-containerH">
 
