--- a/site/public/PageLogin.html
+++ b/site/public/PageLogin.html
@@ -23,7 +23,7 @@
     <div> <a href="index.html" style="">На главную</a></div>
     <div class="login">
         <button>X</button>
-        <h3>Вход</h3>
+        <h3>Подтвердите</h3>
         <label for="login">Логин</label>
         <input type="text" id="login" name="login" />
         <label for="password">Пароль</label>
@@ -31,15 +31,18 @@
         <input type="submit" value="Войти" id="loginB" />
     </div>
 
+    <br>
     <div id="dellA" style="display:none;">
+        <!--  -->
         <input id="delV" name="dl" type="text" placeholder="del"><br>
         <button id="PdelBc">Удалить
     </button>
     </div><br>
 
     <div id="updateA" style="display:none;">
+        <!--  -->
         <input id="updateN" name="dl" type="text" placeholder="имя"><br>
-        <input id="updateP" name="dl" type="text" placeholder="новый пароль"><br>
+        <input id="updateP" name="dl" type="password" placeholder="новый пароль"><br>
         <button id="Pupdatec">Изменить пароль
     </button>
     </div>
