--- a/site/public/PageReg.html
+++ b/site/public/PageReg.html
@@ -36,9 +36,9 @@
     <script>
         /* socket.on('whuN', function() {
 
-                                                                                                            socket.emit("whuS");
-                                                                                                        });
-                                                                                                 */
+                                                                                                                    socket.emit("whuS");
+                                                                                                                });
+                                                                                                         */
 
         socket.on('whu', function(value) {
 
@@ -77,7 +77,8 @@
             socket.emit("PaddB", ([ //{}
                 name,
                 passwС,
-                email
+                //email// потом
+                passwС
 
             ]));
             //window.localStorage.removeItem("aName");
